--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -62,6 +62,9 @@
     <Filter Include="Source Files\Game\Instance">
       <UniqueIdentifier>{f11a9f40-3356-4fb3-9b98-fe7892bc842e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Game\Interface">
+      <UniqueIdentifier>{1041d271-4bba-4703-86d1-688bee82cd20}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Animation\frameSwapper.cpp">
@@ -424,6 +427,9 @@
     </ClCompile>
     <ClCompile Include="Source\Utility\chaiscriptStdLib.cpp">
       <Filter>Source Files\Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\Interface\guiFactories.cpp">
+      <Filter>Source Files\Game\Interface</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1009,6 +1015,9 @@
     </ClInclude>
     <ClInclude Include="Source\Utility\chaiscriptStdLib.h">
       <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\Interface\guiFactories.h">
+      <Filter>Source Files\Game\Interface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
