Updating for performance and creature spawning.
Former-commit-id: b2d943043e46be42686649bc9e67799c1e86bb91 [formerly f88e181ae3579b5536e5e8a1e6c83bcb7bc8f135]
Former-commit-id: 80ba3983bd4dbed7a5c146d99d8157765b9145dc

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -125,7 +125,7 @@
       <GenerateDebugInformation>DebugFastLink</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;glu32.lib;SDL2.lib;SDL2main.lib;SDL2test.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;libboost_filesystem-vc140-mt-1_58.lib;libboost_system-vc140-mt-1_58.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
-      <Profile>false</Profile>
+      <Profile>true</Profile>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
@@ -178,7 +178,7 @@
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
-      <Profile>false</Profile>
+      <Profile>true</Profile>
       <LinkStatus>
       </LinkStatus>
       <PreventDllBinding>true</PreventDllBinding>
