--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -337,6 +337,8 @@
     <ClCompile Include="Source\Utility\chaiscriptStdLib.cpp" />
     <ClCompile Include="Source\Utility\expression.cpp" />
     <ClCompile Include="Source\Utility\generalUtility.cpp" />
+    <ClCompile Include="Source\Utility\log.cpp" />
+    <ClCompile Include="Source\Utility\sha512.cpp" />
     <ClCompile Include="Source\Utility\stopwatch.cpp" />
     <ClCompile Include="Source\Utility\threadPool.cpp" />
   </ItemGroup>
@@ -469,7 +471,6 @@
     <ClInclude Include="..\external\spine\Slot.h" />
     <ClInclude Include="..\external\spine\SlotData.h" />
     <ClInclude Include="..\external\spine\spine.h" />
-    <ClInclude Include="lobbyServer.h" />
     <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
     <ClInclude Include="Source\ClickerGame\clickerGame.h" />
     <ClInclude Include="Source\DiggerGame\diggerGame.h" />
@@ -488,6 +489,7 @@
     <ClInclude Include="Source\Game\Interface\guiFactories.h" />
     <ClInclude Include="Source\Game\managers.h" />
     <ClInclude Include="Source\Game\player.h" />
+    <ClInclude Include="Source\Game\Server\lobbyServer.h" />
     <ClInclude Include="Source\Game\state.h" />
     <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Network\download.h" />
@@ -528,15 +530,17 @@
     <ClInclude Include="Source\Render\sharedTextures.h" />
     <ClInclude Include="Source\Render\texturePacker.h" />
     <ClInclude Include="Source\Render\textures.h" />
+    <ClInclude Include="Source\Utility\cerealUtility.h" />
     <ClInclude Include="Source\Utility\chaiscriptStdLib.h" />
     <ClInclude Include="Source\Utility\expression.h" />
     <ClInclude Include="Source\Utility\generalUtility.h" />
-    <ClInclude Include="Source\Utility\log.hpp" />
+    <ClInclude Include="Source\Utility\log.h" />
     <ClInclude Include="Source\Utility\messageHandler.hpp" />
     <ClInclude Include="Source\Utility\optionalCalls.hpp" />
     <ClInclude Include="Source\Utility\package.h" />
     <ClInclude Include="Source\Utility\require.hpp" />
     <ClInclude Include="Source\Utility\scopeGuard.hpp" />
+    <ClInclude Include="Source\Utility\sha512.h" />
     <ClInclude Include="Source\Utility\signal.hpp" />
     <ClInclude Include="Source\Utility\stopwatch.h" />
     <ClInclude Include="Source\Utility\task.hpp" />
